kube-deploy/kube-demo.yaml
#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: kube-stateless-service
#  labels:
#    app: kube-stateless
#spec:
#  type: NodePort
#  selector:
#    app: kube-stateless
#  ports:
#  - protocol: TCP
#    port: 80
#    targetPort: 8080
#    name: http
#
#---
  #apiVersion: apps/v1
#kind: Deployment
#metadata:
#  name: kube-stateless-deployment
#  labels:
#    app: kube-stateless
#spec:
#  replicas: 3
#  selector:
#    matchLabels:
#      app: kube-stateless
#  template:
#    metadata:
#      labels:
#        app: kube-stateless
#    spec:
#      containers:
#      - name: kube-stateless
#        image: kube-stateless:1.0-SNAPSHOT
#        ports:
#        - containerPort: 8080
#        livenessProbe:
#          httpGet:
#            path: /actuator/health
#            port: 8080
#          initialDelaySeconds: 30
#          timeoutSeconds: 1

---
apiVersion: v1
kind: Service
metadata:
  name: kube-stateful-cache-service
  labels:
    app: kube-stateful-cache
spec:
  type: LoadBalancer
  selector:
    app: kube-stateful-cache
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http

---
apiVersion: v1
kind: Service
metadata:
  name: kube-stateful-hazelcast-service
  labels:
    app: kube-stateful-hazelcast
spec:
  type: LoadBalancer
  selector:
    app: kube-stateful-cache
  ports:
    - name: hazelcast
      port: 5701

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-stateful-cache-deployment
  labels:
    app: kube-stateful-cache
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kube-stateful-cache
  template:
    metadata:
      labels:
        app: kube-stateful-cache
    spec:
      containers:
        - name: kube-stateful-cache
          image: madkubedemoacr.azurecr.io/kube-stateful-cache:1.0-SNAPSHOT
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            timeoutSeconds: 1

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kube-stateful-cache-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: kube-stateful-cache-service
              servicePort: 80
